--- a/teleportd/res/layout/main.xml
+++ b/teleportd/res/layout/main.xml
@@ -8,6 +8,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello" />
+
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="196dp"
+        android:numColumns="3" >
+    </GridView>
+
     <com.google.android.maps.MapView
 	 android:id="@+id/mapView"
 	 android:layout_width="fill_parent"
