that rocks!!! i finally got to show the pics!!!

--- a/teleportd/res/layout/main.xml
+++ b/teleportd/res/layout/main.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello" />
@@ -12,7 +13,7 @@
     <GridView
         android:id="@+id/gridView"
         android:layout_width="match_parent"
-        android:layout_height="196dp"
+        android:layout_height="199dp"
         android:numColumns="3" >
     </GridView>
 
