--- a/teleportd/res/layout/main.xml
+++ b/teleportd/res/layout/main.xml
@@ -1,30 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relativeLayout1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:padding="-1dp" >
 
     <GridView
         android:id="@+id/gridView"
         android:layout_width="match_parent"
-        android:layout_height="199dp"
+        android:layout_height="189dp"
+        android:horizontalSpacing="0dp"
         android:numColumns="4"
-        >
+        android:verticalSpacing="0dp"
+        android:listSelector="@android:color/transparent"
+         >
+
     </GridView>
 
-    <com.google.android.maps.MapView
-	 android:id="@+id/mapView"
-	 android:layout_width="fill_parent"
-	 android:layout_height="fill_parent"
-	 android:enabled="true"
-	 android:clickable="true"
-	 android:apiKey="@string/mapkey1"
- />
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gridView"
+        android:background="@drawable/background_menu"
+        android:gravity="center"
+       >
+       
+          
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/locate" />
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/imageView1"
+            android:src="@drawable/orbit" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/imageView2"
+            android:src="@drawable/search" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/imageView3"
+            android:src="@drawable/snap" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/imageView4"
+            android:src="@drawable/profile" />
+    </RelativeLayout>
+
+    <com.google.android.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/relativeLayout2"
+        android:apiKey="@string/mapkey1"
+        android:clickable="true"
+        android:enabled="true" />
+
+</RelativeLayout>
