refactoring almost done

--- a/teleportd/res/layout/main.xml
+++ b/teleportd/res/layout/main.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/gridView"
         android:gravity="center"
+        android:scaleType="fitXY" 
         android:background="@drawable/background_menu" >
 
         <Button
